[gd_scene load_steps=19 format=3 uid="uid://h8x2safjk68x"]

[ext_resource type="Script" path="res://Clash/Scripts/Scene-0/initialize.gd" id="1_hpmq2"]
[ext_resource type="Theme" uid="uid://b2vr4panjjw2a" path="res://Clash/Themes/loading_content.tres" id="2_ki4qm"]
[ext_resource type="Theme" uid="uid://cf8whtktkywed" path="res://Clash/Themes/normal_text.tres" id="3_xmbwm"]
[ext_resource type="FontFile" uid="uid://c1bh5wpeycudp" path="res://Clash/fonts/Cusong/Chusung-220206.ttf" id="4_p00dl"]
[ext_resource type="Theme" uid="uid://pfig5buy8wqv" path="res://Clash/Themes/button.tres" id="5_f06b5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hast5"]
bg_color = Color(0.156863, 0.172549, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tu00"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6hm1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 3
border_width_right = 6
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ry2b5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 3
border_width_right = 6
border_width_bottom = 6

[sub_resource type="FontVariation" id="FontVariation_mhxfd"]
base_font = ExtResource("4_p00dl")
spacing_glyph = 5
spacing_bottom = 17

[sub_resource type="FontVariation" id="FontVariation_4ckix"]
base_font = ExtResource("4_p00dl")
spacing_glyph = 5
spacing_top = 17

[sub_resource type="FontVariation" id="FontVariation_c5id7"]
base_font = ExtResource("4_p00dl")
spacing_glyph = 7
spacing_top = 5

[sub_resource type="InputEventKey" id="InputEventKey_ngf1r"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_pg8w2"]
device = -1
keycode = 4194439
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_ngx33"]
events = [SubResource("InputEventKey_ngf1r"), SubResource("InputEventKey_pg8w2")]

[sub_resource type="InputEventKey" id="InputEventKey_r76hq"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="InputEventKey" id="InputEventKey_fw5tw"]
device = -1
keycode = 4194440
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_7owt8"]
events = [SubResource("InputEventKey_r76hq"), SubResource("InputEventKey_fw5tw")]

[node name="initialize" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_hpmq2")

[node name="BackGround" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hast5")
metadata/_edit_group_ = true

[node name="BorderLine" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label_Up" type="Label" parent="BorderLine"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 60.0
theme_override_styles/normal = SubResource("StyleBoxFlat_2tu00")

[node name="Label_Middle" type="Label" parent="BorderLine"]
layout_mode = 0
offset_top = 60.0
offset_right = 1152.0
offset_bottom = 582.0
theme_override_styles/normal = SubResource("StyleBoxFlat_k6hm1")

[node name="Label_Down" type="Label" parent="BorderLine"]
layout_mode = 0
offset_top = 582.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ry2b5")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 100
layout_mode = 0
offset_top = 582.0
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("2_ki4qm")
theme_override_constants/margin_left = 45

[node name="Loading_Content" type="Label" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_ki4qm")
text = "正在初始化..."
vertical_alignment = 1

[node name="MarginContainer2" type="Control" parent="."]
z_index = 100
layout_mode = 1
anchor_top = 0.093
anchor_right = 1.0
anchor_bottom = 0.889
offset_top = -0.264
offset_bottom = 5.92798
theme = ExtResource("2_ki4qm")

[node name="Label_Warning" type="Label" parent="MarginContainer2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xmbwm")
theme_override_fonts/font = SubResource("FontVariation_mhxfd")
theme_override_font_sizes/font_size = 28
text = "请不要关闭您的终端"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_Choose" type="RichTextLabel" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xmbwm")
theme_override_fonts/normal_font = SubResource("FontVariation_4ckix")
text = ">>> 启动选项 <<<"
fit_content = true
scroll_active = false

[node name="Button1" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_f06b5")
theme_override_fonts/font = SubResource("FontVariation_c5id7")
shortcut = SubResource("Shortcut_ngx33")
text = "1)进入clashOS"
flat = true
alignment = 0

[node name="Button2" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_f06b5")
theme_override_fonts/font = SubResource("FontVariation_c5id7")
shortcut = SubResource("Shortcut_7owt8")
text = "2)进入clashOS（安全模式）"
flat = true
alignment = 0

[connection signal="pressed" from="MarginContainer2/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
